kubernetes/namespaces/default/outline/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
spec:
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
      - name: outline
        image: outlinewiki/outline:latest
        ports:
          - name: outline
            containerPort: 3000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /robots.txt
            port: 3000
            scheme: HTTP
          # it usually takes 20 seconds to start the server
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
