kubernetes/namespaces/default/outline/service.yml
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  selector:
    app: outline
  ports:
    - name: outline
      port: 80
      targetPort: outline
