kubernetes/namespaces/default/outline/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
spec:
  ingressClassName: nginx
  rules:
    - host: outline.hyperserver.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  number: 80
